[package]
name = "croncat-indexer-filter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mlua = { version = "0.8.6", features = ["luajit", "vendored", "serialize"] }
serde = { version = "^1.0.149", features = ["derive"] }
serde_yaml = "^0.9.14"

[dev-dependencies]
indoc = "1.0.7"
